# probzoo

./: .editorconfig  .eslintrc.json  .gitignore  .mocharc.json  Cargo.toml  Makefile.toml  gulpfile.esm.js  gulpfile.ts  package.json  tsconfig.json  webpack.config.js  zakzak.config.json
benchmark/: array-ops.bench.ts  pdfs.bench.ts
build-lib/: pages.mjs  pages.ts
js/: .eslintrc.json  arrays.js  arrays.ts  beta.js  distribution.ts  index.js  index.ts  normal.js  normal.ts  params.js  pdf.js  pdf.ts
layouts/: distribution.html.njk  distribution.njk
lib/: arrays.js  arrays.ts  distribution.ts  normal.ts
pages/: normal.md
pages/distributions/: beta.md  normal.md
src/: curve.rs  lib.rs  util.rs
src/distributions/: beta.rs  mod.rs  normal.rs
test/: array-ops.test.ts  basic-math.test.ts
tests/: basic-math.test.ts
